--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://efh.moe" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bizcardsite</title>
+    <title>efh.moe</title>
   </head>
   <body>
     <div id="app"></div>
